# api/docs/swagger.yaml
@@ -274,11 +274,6 @@ definitions:
       username:
         type: string
     type: object
-  users.UserId:
-    properties:
-      userId:
-        type: string
-    type: object
 host: localhost:4444
 info:
   contact: {}
@@ -868,18 +863,17 @@ paths:
       summary: restaurant yangilash
       tags:
       - restaurant
-  /users/deleteProfile:
+  /users/deleteProfile/{id}:
     delete:
       consumes:
       - application/json
       description: Delete Profile
       parameters:
       - description: Delete Profile
-        in: body
-        name: user
+        in: query
+        name: id
         required: true
-        schema:
-          $ref: '#/definitions/users.UserId'
+        type: string
       produces:
       - application/json
       responses:
@@ -900,7 +894,7 @@ paths:
       - application/json
       description: Get Profile
       parameters:
-      - description: User ID
+      - description: get Profile
         in: path
         name: id
         required: true
